--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,21 @@ html {
      align-items: center;
 }
 
+.cv-link {
+     margin-left: 10px;
+     width: 80px;
+     height: 40px;
+     border-radius: 10px;
+     background: #ffffff;
+     border: 1px solid #888888;
+     padding: 5px;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     font-size: 1.5em;
+     text-decoration: none;
+}
+
 .social-link {
      margin-left: 10px;
      width: 40px;
@@ -116,10 +131,22 @@ html {
      height: 80%;
 
      background-color: #F5F5F5;
+/*      background-image: url(./imgs/flowers.jpg); */
+     background-position: center;
+     background-size: cover;
      border: 1.5px solid #fff;
+     border-radius: 10px;
+}
+
+.skills-box .skills-layer {
+     width: 100%;
+     height: 100%;
+/*      background-color: rgba(0, 0, 0, 0.5); */
+
      border-radius: 10px;
      padding: 20px;
 }
+
 .me-side .skills-box .skills {
      font-size: 1em;
      display: flex;
