--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=MuseoModerno&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
   --black: #212121;
@@ -14,13 +13,23 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: var(--black);
   transition: .2s linear;
 }
 
 html {
      background-color:#F5F5F5;
+}
+
+.bgVideo {
+     position: fixed;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+     z-index: -1;
+     object-fit: cover;
 }
 
 .main-page {
@@ -33,41 +42,22 @@ html {
 
 /* DESKTOP */
 .section {
-      width: 1400px;
-      height: 800px;
-      background-color: #fff;
-      border: 1.5px solid var(--light);
-      border-radius: 10px;
-      display: flex;
-      flex-direction: column;
-     }
-
-.header-section {
-     width: 100%;
-     height: 10%;
-}
-
-.body-section {
-     width: 100%;
-     height: 90%;
-
-     display: flex;
-}
-
-.me-side {
-     height: 100%;
-     width: 50%;
-
+     width: 1400px;
+     height: 800px;
+     background-color: transparent;
+     border: 1.5px solid var(--light);
+     border-radius: 10px;
      display: flex;
      flex-direction: column;
-}
+     justify-content: space-between;
+     }
 
 .head-box {
      width: 100%;
-     height: 100%;
      background-color: #fff;
      border: 1.5px solid #fff;
-     border-radius: 10px;
+     border-radius: 0 0 10px 10px;
+     padding: 40px 0;
 }
 
 .head-box .header {
@@ -81,6 +71,7 @@ html {
 
 .head-box .header h1 {
      color: var(--black);
+     font-size: 2.5em;
 }
 
 .head-box .header .socials {
@@ -89,25 +80,10 @@ html {
      align-items: center;
 }
 
-.cv-link {
-     margin-left: 10px;
-     width: 80px;
-     height: 40px;
-     border-radius: 10px;
-     background: #ffffff;
-     border: 1px solid #888888;
-     padding: 5px;
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     font-size: 1.5em;
-     text-decoration: none;
-}
-
 .social-link {
      margin-left: 10px;
-     width: 40px;
-     height: 40px;
+     width: 50px;
+     height: 50px;
      border-radius: 10px;
      background: #ffffff;
      border: 1px solid #888888;
@@ -126,118 +102,63 @@ html {
      color: #5246ff
 }
 
-.me-side .skills-box {
-     width: 100%;
-     height: 80%;
-
-     background-color: #F5F5F5;
-/*      background-image: url(./imgs/flowers.jpg); */
-     background-position: center;
-     background-size: cover;
-     border: 1.5px solid #fff;
-     border-radius: 10px;
+.section .data {
+     display: flex;
+     flex-wrap: wrap;
+     gap: 20px;
+     margin: 20px;
 }
 
-.skills-box .skills-layer {
-     width: 100%;
-     height: 100%;
-/*      background-color: rgba(0, 0, 0, 0.5); */
-
+/* SKILLS */
+.skills-box {
+     background-color: rgba(225, 225, 225, 0.8);
      border-radius: 10px;
      padding: 20px;
+     border: 1px solid #fff;
 }
 
-.me-side .skills-box .skills {
-     font-size: 1em;
+.skills-box .skills {
      display: flex;
      flex-wrap: wrap;
 }
 
-.me-side .skills-box .skills p {
-     padding: 5px;
+.skills-box .skills p {
+     margin: 0 10px 10px 0;
      background-color: #fff;
-     margin: 5px 10px 5px 0;
+     padding: 3px 5px;
      border-radius: 5px;
 }
 
-.me-side .blog-box {
-     width: 100%;
-     height: 20%;
-
-     background-color: #fff;
-     border: 1.5px solid #fff;
+.blog-box {
      border-radius: 10px;
-
-     background-image: url(./imgs/ds.jpg);
-     background-size: cover;
+     padding: 10px;
+     width: 500px;
+     height: 200px;
+     background-image: url(./imgs/pink.jpg);
      background-position: center;
-}
-
-.me-side .blog-box .header {
-     width: 100%;
-     height: 100%;
-
-     display: flex;
-     justify-content: center;
-     align-items: center;
-
-     background-color: rgba(0, 0, 0, 0.5);
-     border-radius: 10px;
-}
-
-.services-side {
-     height: 100%;
-     width: 50%;
-}
-
-.services-side .services-box {
-     overflow: hidden;
-     height: 100%;
-     width: 100%;
-
-     display: flex;
-     flex-direction: column;
-
-     background-color: #fff;
-     border: 1.5px solid #fff;
-     border-radius: 10px;
-
-     background-image: url(./imgs/pexels-thiago-japyassu-12760302.jpg);
      background-size: cover;
-     background-position: bottom;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     border: 1px solid #fff;
 }
 
-.services-side .services-box .load {
+.services-box {
+     border-radius: 10px;
+     padding: 10px;
+     width: 500px;
+     height: 50%;
+     background-color: #212121;
      display: flex;
      flex-direction: column;
-     justify-content: center;
      align-items: center;
-     width: 100%;
-     height: 100%;
-     background: rgba(0, 0, 0, 0.5);
+     justify-content: center;
+     border: 1px solid #fff;
 }
 
-.services-side .services-box .load h1 {
-     color: var(--light);
-     text-align: center;
+.services-box h1 {
+     color: #fff;
 }
-
-.loadingAnimationData {
-     width: 400px;
-}
-
-.skills-box .js > * {
-     color: rgb(255, 215, 38);
-}
-
-.skills-box .cs > * {
-     color: var(--lila);
-}
-
-.skills-box .blender > * {
-     color: #ff9900;
-}
-
 
 /* MEDIA */
 @media screen and (max-width: 1400px) {
@@ -245,44 +166,32 @@ html {
           width: 100%;
           height: 100%;
     }
-
-    .loadingAnimationData {
-          width: 50%;
-    }
 }
 
 @media screen and (max-width: 850px) {
+     .section .data {
+          margin: 10px;
+          gap: 10px;
+     }
+     p {
+          font-size: 1em;
+     }
      h1 {
           font-size: 1.5em;
      }
-     .body-section {
-          flex-direction: column;
-    }
-
-    .me-side {
-     height: 50%;
+     .skills-box {
           width: 100%;
-    }
-
-    .load {
-          padding: 20px;
-    }
-
-    .services-side {
-          width: 100%;
-          height: 50%;
-    }
-}
-
-@media screen and (max-width: 400px) {
-     p {
-          font-size: .8em;
      }
-     .me-side {
-               height: 60%;
-         }
-     
-         .services-side {
-               height: 40%;
-         }
+     .blog-box, .services-box {
+          width: 100%;
+          height: 100px;
+     }
+
+} 
+
+@media screen and (max-height: 800px) {
+     .section {
+          width: 1400px;
+          height: 100%;
+     }
 }
