--- a/src/index.css
+++ b/src/index.css
@@ -44,12 +44,16 @@ html {
 .section {
      width: 1400px;
      height: 800px;
-     background-color: transparent;
      border: 1.5px solid var(--light);
      border-radius: 10px;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
+
+     background-color: rgba(225, 225, 225, 0.1);
+     backdrop-filter: blur(2px);
+     border-radius: 20px;
+     overflow: hidden;
      }
 
 .head-box {
@@ -143,11 +147,15 @@ html {
      border: 1px solid #fff;
 }
 
+.blog-box h1 {
+     font-size: 1.5em;
+}
+
 .services-box {
      border-radius: 10px;
      padding: 10px;
      width: 500px;
-     height: 50%;
+     height: 200px;
      background-color: #212121;
      display: flex;
      flex-direction: column;
@@ -158,6 +166,7 @@ html {
 
 .services-box h1 {
      color: #fff;
+     font-size: 1.5em;
 }
 
 /* MEDIA */
