--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,6 @@
   --black: #212121;
   --lila: #8C52FF;
   --light: #FAF9F6;
-
-  --retro-pink: #efaaa9;
-  --retro-green: #8db4ad;
 }
 
 * {
@@ -14,25 +11,14 @@
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
-  color: var(--black);
+  color: var(--light);
   transition: .2s linear;
+  scroll-behavior: smooth;
+  cursor: pointer;
 }
 
 html {
-     background-color:#F5F5F5;
-}
-
-.bgVideo {
-     position: fixed;
-     top: 0;
-     left: 0;
-     width: 100%;
-     height: 100%;
-     z-index: -1;
-     object-fit: cover;
-}
-
-.main-page {
+     background-color:var(--light);
      width: 100%;
      height: 100vh;
      display: flex;
@@ -40,168 +26,89 @@ html {
      align-items: center;
 }
 
-/* DESKTOP */
-.section {
+.main-page {
+     background-color: var(--black);
+     padding: 0 20px;
      width: 1400px;
      height: 800px;
-     border: 1.5px solid var(--light);
-     border-radius: 10px;
-     display: flex;
-     flex-direction: column;
-     justify-content: space-between;
-
-     background-color: rgba(225, 225, 225, 0.1);
-     backdrop-filter: blur(2px);
      border-radius: 20px;
-     overflow: hidden;
-     }
-
-.head-box {
-     width: 100%;
-     background-color: #fff;
-     border: 1.5px solid #fff;
-     border-radius: 0 0 10px 10px;
-     padding: 10px 0;
 }
 
-.head-box .header {
+.header-section {
+     width: 100%;
+     height: 10%;
+}
+
+.body-section {
+     width: 100%;
+     height: 90%;
+}
+
+.header {
      width: 100%;
      height: 100%;
      display: flex;
+     justify-content: space-between;
      align-items: center;
-     justify-content: space-between;
-     padding: 0 20px;
 }
 
-.head-box .header h1 {
-     color: var(--black);
-     font-size: 2.5em;
-}
-
-.head-box .header .socials {
+.socials {
      display: flex;
-     justify-content: space-between;
      align-items: center;
 }
 
 .social-link {
-     margin-left: 10px;
-     width: 50px;
-     height: 50px;
-     border-radius: 10px;
-     background: #ffffff;
-     border: 1px solid #888888;
-     padding: 5px;
-     display: flex;
-     align-items: center;
-     justify-content: center;
+     margin-left: 20px;
      font-size: 2em;
 }
 
-.head-box .header .git > * {
-     color: var(--black);
-}
-
-.head-box .header .DC > * {
-     color: #5246ff
-}
-
-.section .data {
-     display: flex;
-     flex-wrap: wrap;
-     gap: 20px;
-     margin: 20px;
-}
-
-/* SKILLS */
 .skills-box {
-     background-color: rgba(225, 225, 225, 0.8);
-     border-radius: 10px;
-     padding: 20px;
-     border: 1px solid #fff;
+     width: 100%;
+     height: 50%;
 }
 
-.skills-box .skills {
+.skills {
      display: flex;
      flex-wrap: wrap;
 }
 
-.skills-box .skills p {
-     margin: 0 10px 10px 0;
-     background-color: #fff;
-     padding: 3px 5px;
+.skills p {
+     color: var(--black);
+     padding: 2px 5px;
+     background-color: var(--light);
+     margin: 5px 5px 0 0;
      border-radius: 5px;
 }
 
-.blog-box {
-     border-radius: 10px;
-     padding: 10px;
-     width: 500px;
-     height: 200px;
-     background-image: url(./imgs/pink.jpg);
-     background-position: center;
-     background-size: cover;
+.info {
+     width: 100%;
+     height: 50%;
      display: flex;
      align-items: center;
      justify-content: center;
-     border: 1px solid #fff;
 }
 
-.blog-box h1 {
-     font-size: 1.5em;
-}
-
-.services-box {
-     border-radius: 10px;
-     padding: 10px;
-     width: 500px;
-     height: 200px;
-     background-color: #212121;
-     display: flex;
-     flex-direction: column;
-     align-items: center;
-     justify-content: center;
-     border: 1px solid #fff;
-}
-
-.services-box h1 {
-     color: #fff;
-     font-size: 1.5em;
-     text-align: center;
-}
 
 /* MEDIA */
 @media screen and (max-width: 1400px) {
-     .section {
+     html {
+          display: block;
+     }
+     .main-page {
           width: 100%;
-          height: 100%;
-    }
+          height: 100vh;
+          border-radius: 0;
+     }
 }
 
 @media screen and (max-width: 850px) {
-     .section .data {
-          margin: 10px;
-          gap: 10px;
+     .header h1 {
+          font-size: 1.5em;
      }
-     p {
-          font-size: 1em;
+     .main-page {
+          padding: 10px;
      }
-     h1 {
-          font-size: 1em;
-     }
-     .skills-box {
-          width: 100%;
-     }
-     .blog-box, .services-box {
-          width: 100%;
-          height: 100px;
-     }
-
 } 
 
 @media screen and (max-height: 800px) {
-     .section {
-          width: 1400px;
-          height: 100%;
-     }
 }
