--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-  --black: #212121;
-  --lila: #8C52FF;
-  --light: #FAF9F6;
+  --black: #2e2e2e;
+  --lila: #ACA5FF;
+  --light: #f5f5f5;
 }
 
 * {
@@ -11,7 +11,7 @@
   margin: 0;
   padding: 0;
   font-family: "Poppins", sans-serif;
-  color: var(--light);
+  color: var(--black);
   transition: .2s linear;
   scroll-behavior: smooth;
   cursor: pointer;
@@ -23,92 +23,62 @@ html {
      height: 100vh;
      display: flex;
      justify-content: center;
-     align-items: center;
+     align-items: start;
 }
 
-.main-page {
-     background-color: var(--black);
-     padding: 0 20px;
+.main {
      width: 1400px;
-     height: 800px;
-     border-radius: 20px;
 }
 
-.header-section {
+.logo {
      width: 100%;
-     height: 10%;
+     height: 200px;
+     text-align: center;
 }
 
-.body-section {
-     width: 100%;
-     height: 90%;
-}
-
-.header {
-     width: 100%;
-     height: 100%;
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
-}
-
-.socials {
-     display: flex;
-     align-items: center;
-}
-
-.social-link {
-     margin-left: 20px;
-     font-size: 2em;
-}
-
-.skills-box {
-     width: 100%;
-     height: 50%;
-}
-
-.skills {
-     display: flex;
-     flex-wrap: wrap;
-}
-
-.skills p {
-     color: var(--black);
-     padding: 2px 5px;
-     background-color: var(--light);
-     margin: 5px 5px 0 0;
-     border-radius: 5px;
-}
-
-.info {
-     width: 100%;
-     height: 50%;
-     display: flex;
-     align-items: center;
+.logo h1 {
+     left: 0;
+     right: 0;
+     font-size: 12em;
+     position: absolute;
+     top: -120px;
      justify-content: center;
 }
 
+.logo h1 span {
+     color: var(--lila);
+}
 
-/* MEDIA */
-@media screen and (max-width: 1400px) {
-     html {
-          display: block;
-     }
-     .main-page {
+@media screen and (max-width: 1500px) {
+     .main {
           width: 100%;
-          height: 100vh;
-          border-radius: 0;
+     }
+
+     .logo h1 {
+          font-size: 13vw;
+          position: absolute;
+          top: -8vw;
+          justify-content: center;
+     }
+
+
+}
+
+@media screen and (max-width: 1200px) {
+}
+
+@media screen and (max-width: 800px) {
+}
+
+@media screen and (max-width: 500px) {
+     .logo h1 {
+          font-size: 13vw;
+          position: absolute;
+          top: 0;
+          justify-content: center;
      }
 }
 
-@media screen and (max-width: 850px) {
-     .header h1 {
-          font-size: 1.5em;
-     }
-     .main-page {
-          padding: 10px;
-     }
-} 
+@media screen and (max-width: 400px) {
 
-@media screen and (max-height: 800px) {
 }
