--- a/src/index.css
+++ b/src/index.css
@@ -28,11 +28,14 @@ html {
 
 .main {
      width: 1400px;
+     height: 100vh;
+
+     display: flex;
+     justify-content: center;
 }
 
 .logo {
      width: 100%;
-     height: 200px;
      text-align: center;
 }
 
@@ -49,6 +52,35 @@ html {
      color: var(--lila);
 }
 
+.footer {
+     position: absolute;
+     bottom: 0;
+     width: 1400px;
+     height: 50px;
+     background-color: var(--black);
+     border-radius: 20px 20px 0 0;
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+     padding: 0 20px;
+}
+
+.footer p {
+     color: var(--light);
+}
+
+.footer .socials {
+     width: 80px;
+     display: flex;
+     justify-content: space-around;
+     align-items: center;
+}
+
+.footer .socials * {
+/*      color: var(--light); SYY MIKS SOCIALS EI NÄY*/
+     font-size: 1.5em;
+}
+
 @media screen and (max-width: 1500px) {
      .main {
           width: 100%;
@@ -61,7 +93,9 @@ html {
           justify-content: center;
      }
 
-
+     .footer {
+          width: 95%;
+     }
 }
 
 @media screen and (max-width: 1200px) {
@@ -76,6 +110,11 @@ html {
           position: absolute;
           top: 0;
           justify-content: center;
+     }
+
+     .footer {
+          width: 100%;
+          border-radius: 0;
      }
 }
 
