--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,11 @@
 
 :root {
   --black: #2e2e2e;
-  --ghost: #E3E3E3;
-  --lila: #ACA5FF;
-  --light: #f5f5f5;
+  --main: #E5E8EF;
+  --db-clr: #A7B3D0;
+     --box-s: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+     --light-transparent-bg: rgba(255, 255, 255, 0.671);
 }
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -18,173 +18,157 @@
   cursor: pointer;
 }
 
-html {
-     background-color:var(--light);
-     width: 100%;
-     height: 100vh;
-     display: flex;
-     justify-content: center;
-     align-items: start;
+body {
+     background-color: var(--main);
 }
 
 .main {
-     width: 1400px;
+     width: 100%;
      height: 100vh;
+     background-color:transparent;
+     padding: 50px 0;
 
      display: flex;
      flex-direction: column;
-     justify-content: center;
+     justify-content: space-between;
      align-items: center;
 }
 
-.logo {
-     width: 100%;
-     text-align: center;
-}
+.img {
+     position: absolute;
+     z-index: -1;
 
-.logo h1 {
+     width: 100%;
      left: 0;
      right: 0;
-     top: -10px;
-     font-weight: bold;
-     font-size: 6em;
-     position: absolute;
-     justify-content: center;
-}
+     top: 0;
+     bottom: 0;
 
-.logo h1 span {
-     color: var(--lila);
-}
-
-.services {
-     width: 100%;
-}
-
-.services h1 {
-     width: 100%;
-     text-align: center;
-     color: var(--ghost);
-     font-size: 6em;
-     position: relative;
-     z-index: -1;
-     bottom: -60px;
-}
-
-.services .titles {
-     padding: 10px 0;
-     width: 100%;
      display: flex;
      justify-content: center;
      align-items: center;
-     background-color: var(--light);
+
+     overflow: hidden;
 }
 
-.services .titles .title {
-     height: 80px;
-     display: flex;
-     flex-direction: column;
-     align-items: center;
-     justify-content: space-between;
+.img img {
+     width: 1250px;
 }
 
-.services .titles .title p {
-     width: 150px;
+.logo h1{
+     font-weight: lighter;
+     font-size: 3em;
+
+     text-shadow: 1px 1px 4px #000000;
+}
+
+.services .data{
+     box-shadow: var(--box-s);
      text-align: center;
-     font-size: 1.1em;
-}
-
-.services .titles .title .line {
-     margin: 10px 0;
-     width: 1px;
-     height: 30px;
-     background: #000;
-}
-
-.services .description {
-     width: 100%;
-     display: flex;
-     justify-content: center;
-}
-
-.services .description p {
+     background-color: var(--light-transparent-bg);
      padding: 20px;
-     width: 600px;
-     border-radius: 30px;
-     border: 1px solid var(--black);
+     border: none;
+     border-radius: 20px;
+     width: 400px;
 }
 
-.skills {
-     width: 100%;
-     height: 200px;
+.services .data h1 {
+     padding-bottom: 20px;
+     color: var(--db-clr);
+}
+
+.services .data p {
+     color: var(--db-clr);
+}
+
+.services .btns {
      display: flex;
-     align-items: end;
      justify-content: center;
+     padding: 10px 0;
+}
+
+.services .btns button {
+     backdrop-filter: blur(10px);
+     background-color: var(--light-transparent-bg);
+     box-shadow: var(--box-s);
+     width: 50px;
+     height: 50px;
+     border: none;
+     border-radius: 100%;
+     margin: 0 30px;
+
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     font-size: 2em;
+
+     * {
+          color:  var(--db-clr);
+     }
 }
 
 .footer {
-     position: absolute;
-     bottom: 0;
-     width: 1400px;
-     height: 50px;
-     background-color: var(--light);
-     border-radius: 20px 20px 0 0;
-     border: 1px solid var(--black);
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     padding: 0 20px;
+     padding: 50px 0;
+     text-align: center;
 }
 
 .footer p {
-     color: var(--black);
+     font-weight: 300;
+     text-shadow: var(--box-s);
 }
 
 .footer .socials {
-     width: 80px;
      display: flex;
+     width: 250px;
      justify-content: space-around;
-     align-items: center;
+     margin-bottom: 20px;
 }
 
-.footer .socials * {
-/*      color: var(--light); SYY MIKS SOCIALS EI NÄY*/
-     font-size: 1.5em;
+.footer .socials .box {
+     padding: 15px;
+     border-radius: 10px;
+     background-color: var(--light-transparent-bg);
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     font-size: 2em;
+
+     box-shadow: var(--box-s);
+
+     * {
+          color:  var(--db-clr);
+     }
 }
 
 @media screen and (max-width: 1500px) {
-     .main {
-          width: 100%;
-     }
-
-     .logo h1 {
-          font-size: 13vw;
-          position: absolute;
-          top: -8vw;
-          justify-content: center;
-     }
-
-     .footer {
-          width: 95%;
-     }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1250px) {
 }
 
 @media screen and (max-width: 800px) {
 }
 
 @media screen and (max-width: 500px) {
-     .logo h1 {
-          font-size: 13vw;
-          position: absolute;
-          top: 0;
-          justify-content: center;
+     .logo h1{
+          font-size: 2.5em;
      }
 
-     .footer {
+     .services {
+          width: 95%;
+     }
+
+     .services .data{
           width: 100%;
-          border-radius: 0;
+     }
+
+     .footer .socials {
+          width: 100%;
+     }
+     
+     .footer .socials .box {
+          padding: 10px;
+          font-size: 1.5em;
      }
 }
 
