--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
      --box-s: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
      --light-transparent-bg: rgba(255, 255, 255, 0.671);
 }
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -16,34 +17,156 @@
   transition: .2s linear;
   scroll-behavior: smooth;
   cursor: pointer;
+  overflow: hidden;
 }
 
-body {
+#root {
      height: 100vh;
      width: 100%;
-     background-color: var(--main);
      display: flex;
      justify-content: center;
      align-items: center;
 }
 
 .main {
-     text-align: center;
+     width: 1400px;
+     height: 100%;
+}
+
+.main .flowers {
+     width: 100%;
+     height: 100%;
+     left: 0;
+     top: 0;
+     right: 0;
+     position: absolute;
+     z-index: -1;
+}
+
+.main .flowers .red {
+     width: 600px;
+     position: absolute;
+     z-index: -1;
+     top: 200px;
+     left: -165px;
+}
+
+.main .flowers .yellow {
+     min-width: 400px;
+     width: 400px;
+     position: absolute;
+     z-index: -1;
+     top: 10px;
+     right: -60px;
+}
+
+.main .title h1{
+     font-size: 10em;
+}
+
+.main .title h1 span{
+     color: #cec1ff;
+}
+
+.main .title .d{
+     position: relative;
+     top: -100px;
+}
+
+.main .notification {
+     font-size: 2em;
+     width: 100%;
+     text-align: right;
 }
 
 @media screen and (max-width: 1500px) {
+     .main {
+          width: 100%;
+          height: 100%;
+     }
 }
 
 @media screen and (max-width: 1250px) {
+     .main .title h1{
+          font-size: 7em;
+     }
+
+     .main .title .d{
+          position: relative;
+          top: -70px;
+     }
+     .main .flowers .red {
+          width: 400px;
+          top: 200px;
+          left: -165px;
+     }
+     
+     .main .flowers .yellow {
+          width: 600px;
+          top: 300px;
+          right: -300px;
+     }
+
+     .main .notification {
+          text-align: center;
+     }
 }
 
 @media screen and (max-width: 800px) {
 }
 
 @media screen and (max-width: 500px) {
+     .main .title h1{
+          font-size: 5.5em;
+     }
+
+     .main .title .d{
+          position: relative;
+          top: -60px;
+     }
+     .main .flowers .red {
+          width: 400px;
+          top: 250px;
+          left: -200px;
+     }
+     
+     .main .flowers .yellow {
+          width: 600px;
+          top: 400px;
+          right: -300px;
+     }
+
+     .main .notification {
+          font-size: 2em;
+          text-align: center;
+     }
 
 }
 
 @media screen and (max-width: 400px) {
+          .main .title h1{
+               font-size: 4.5em;
+          }
+     
+          .main .title .d{
+               position: relative;
+               top: -50px;
+          }
+          .main .flowers .red {
+               width: 400px;
+               top: 250px;
+               left: -200px;
+          }
+          
+          .main .flowers .yellow {
+               width: 600px;
+               top: 400px;
+               right: -300px;
+          }
+     
+          .main .notification {
+               font-size: 1.5em;
+               text-align: center;
+          }
 
 }
