--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Akshar:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Akshar:wght@300..700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 
 :root {
   --black: #2e2e2e;
@@ -9,7 +11,7 @@
      --light-transparent-bg: rgba(255, 255, 255, 0.527);
      --blue-transparent-bg: rgba(120, 111, 248, 0.527);
      --box-s: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-     --inner-box-s: rgba(0, 0, 0, 0.144) 3.2px 3.2px 8px 0px inset, rgba(255, 255, 255, 0.219) -3.2px -3.2px 8px 0px inset, rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+     --inner-box-s: rgba(0, 0, 0, 0.144) 3.2px 3.2px 3.2px 0px inset, rgba(255, 255, 255, 0.219) -3.2px -3.2px 3.2px 0px inset, rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 html {
@@ -20,9 +22,9 @@ html {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto Mono", monospace;
   color: var(--black);
-  transition: .2s linear;
+  transition: .5s linear;
   scroll-behavior: smooth;
   cursor: pointer;
   -webkit-tap-highlight-color: transparent; /* transparent with keyword */
@@ -33,52 +35,53 @@ html {
 }
 
 .white-box {
-     padding: 20px;
-     border-radius: 20px;
-     background-color: #fff;
-     box-shadow: var(--inner-box-s);
-     border: 2px solid #fff;
-   }
+padding: 10px;
+border-radius: 10px;
+background-color: #fff;
+box-shadow: var(--inner-box-s);
+border: 2px solid #fff;
+}
 
-.main {
+body {
      width: 100%;
      height: 100vh;
-     padding: 50px;
-
      display: flex;
-     flex-direction: column;
-     align-items: center;
+     align-items: start;
+     justify-content: center;
+   }
+
+#root {
+width: 1400px;
+height: 100vh;
 }
 
-.main .logo {
-     text-align: center;
-     width: 100%;
-     height: 10%;
+.main {
+width: 100%;
+height: 100%;
+gap: 20px;
+display: flex;
+flex-direction: column;
 }
+
 
 
 @media screen and (max-width: 1500px) {
+     #root {
+          width: 100%;
+        }
 
+     .main {
+     }
 }
 
 @media screen and (max-width: 1000px) {
-     .white-box {
-          padding: 10px;
-          border-radius: 10px;
-        }
 }
 
 @media screen and (max-width: 800px) {
-     .main {
-          padding: 20px;
-     }
-
 }
 
 @media screen and (max-width: 500px) {
-
 }
 
 @media screen and (max-width: 400px) {
-
 }
