--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -62,7 +62,7 @@
      z-index: -1;
      left: 0;
      right: 0;
-     top: -200px;
+     top: -800px;
 
      display: flex;
      flex-direction: column;
@@ -93,7 +93,11 @@
      padding-bottom: 5px;
 }
 
-.navbar .down span:hover {
+.navbar a {
+     text-decoration: underline solid #2e2e2e 1px;
+}
+
+.navbar a:hover {
      text-decoration: underline wavy rgb(111, 49, 255) 5px;
      text-decoration-thickness: 3px;
 }
