--- a/src/Pages/Applications/Applications.css
+++ b/src/Pages/Applications/Applications.css
@@ -16,3 +16,9 @@
 .applications span {
      color: rgb(0, 136, 255);
 }
+
+@media screen and (max-width: 500px) {
+     .applications {
+          padding-top: 80px;
+     }
+}
