--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,132 +1,87 @@
 .navbar {
-     width: 1400px;
-     height: 80px;
-     position: fixed;
-     z-index: 0;
-
-     background-color: #fff;
-     border-bottom: 1px solid #cfcfcf;
-}
-
-.navbar .data {
      width: 100%;
-     height: 100%;
+     height: 80px;
+     padding: 20px;
+
      display: flex;
      justify-content: space-between;
      align-items: center;
-     position: absolute;
-     z-index: 1;
-     background-color: #fff;
+
 }
 
-.navbar .data .logo {
-     font-size: 4em;
-     font-weight: bold;
-     font-family: "Akshar", sans-serif;
+.navbar .title {
+     font-size: 2em;
 }
 
-.navbar .data .services-btn {
+
+
+.navbar .links-desktop {
      display: flex;
-     gap: 10px;
-     align-items: center;
+     gap: 20px;
 }
 
-.navbar .data .services-btn span {
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     font-size: 1.2em;
+.navbar .links-desktop a,
+.navbar .up a,
+.navbar .down a {
+     list-style: none;
+     text-decoration: none;
+
+     border: 1px solid transparent;
+     padding: 20px;
+     border-radius: 20px;
 }
 
-.navbar .down {
-     padding: 40px;
-     position: absolute;
-     z-index: -1;
-     left: 0;
-     right: 0;
-     top: 80px;
+.navbar .links-desktop a:hover {
+     border: 1px solid var(--black);
+}
+
+.navbar .up, .navbar .down {
+     display: none;
+}
+
+.navbar .up, .navbar .down {
+     background-color: #cbb4ff;
+     height: 100vh;
+     width: 100%;
+     border-radius: 0 20px 20px 0;
 
      display: flex;
      flex-direction: column;
+     align-items: center;
+     justify-content: center;
+
      gap: 20px;
-
-     background-color: #fff;
-     backdrop-filter: blur(3px);
-
-     border-bottom: 1px solid #d6d6d6;
 }
 
 .navbar .up {
-     padding: 40px;
-     position: absolute;
-     z-index: -1;
+     left: -100%;
+     top: 0;
+}
+
+.navbar .down {
      left: 0;
-     right: 0;
-     top: -800px;
-
-     display: flex;
-     flex-direction: column;
-     gap: 20px;
-
-     background-color: #fff;
-     backdrop-filter: blur(3px);
-
-     border-bottom: 1px solid #d6d6d6;
+     top: 0;
 }
 
-.navbar .down .box, .navbar .up .box {
-     width: 300px;
-}
-
-.navbar .down .navs, .navbar .up .navs {
-     display: flex;
-     justify-content: space-between;
-}
-
-.navbar .down  .navs .box > h1 , .navbar .up .navs .box > h1{
-     font-size: 1.2em;
-     padding: 10px 0;
-     font-weight: bold;
-}
-
-.navbar .down  .navs .box p {
-     padding-bottom: 5px;
-}
-
-.navbar a {
-     text-decoration: underline solid #2e2e2e 1px;
-}
-
-.navbar a:hover {
-     text-decoration: underline wavy rgb(111, 49, 255) 5px;
-     text-decoration-thickness: 3px;
-}
-
-
-
-@media screen and (max-width: 1500px) {
-     .navbar {
-          width: 100%;
-     }
-
-     .navbar .data {
-          padding: 20px;
-     }
-}
-
-@media screen and (max-width: 1200px) {
-     .navbar .up {
-          top: -800px;
-     }
-
-     .navbar .down .navs, .navbar .up .navs {
-          flex-wrap: wrap;
-          gap: 20px;
-     }
-     
-     .navbar .up {
+@media screen and (min-width: 1000px) {
+     .navbar .up, .navbar .down, .navbar .btn {
+          display: none;
      }
 }
 
 @media screen and (max-width: 1000px) {
+     .navbar .links-desktop {
+          display: none;
+     }
+
+     .navbar .btn {
+          display: flex;
+          font-size: 2em;
+          position: relative;
+          z-index: 1;
+     }
+     .navbar .up, .navbar .down {
+          display: flex;
+          position: absolute;
+     }
 }
