--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 :root {
   --black: #2e2e2e;
   --main: #786FF8;
-  --bg-clr: #ECEDF2;
+  --bg-clr: #FCF7F1;
   --orange-clr: #FFB906;
      --box-s: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
      --light-transparent-bg: rgba(255, 255, 255, 0.527);
@@ -26,7 +26,7 @@ html {
   padding: 0;
   font-family: "Roboto Mono", monospace;
   color: var(--black);
-  transition: .5s linear;
+  transition: .2s linear;
   scroll-behavior: smooth;
   cursor: pointer;
   -webkit-tap-highlight-color: transparent; /* transparent with keyword */
@@ -48,16 +48,24 @@ body {
      width: 100%;
      height: 100vh;
      display: flex;
-     align-items: start;
+     align-items: center;
      justify-content: center;
    }
 
 #root {
 width: 1400px;
-height: 100vh;
+height: 800px;
+min-height: 800px;
+max-height: 800px;
+
+border: 1px solid #2e2e2e;
+border-radius: 20px;
+
+overflow: hidden;
 }
 
 .main {
+padding-top: 20px;
 width: 100%;
 height: 100%;
 gap: 20px;
@@ -80,6 +88,22 @@ flex-direction: column;
 }
 
 @media screen and (max-width: 800px) {
+}
+
+@media screen and (min-height: 1000px) {
+     #root {
+          height: 800px;
+          min-height: 800px;
+          max-height: 800px;
+          }
+}
+
+@media screen and (max-height: 1000px) {
+     #root {
+          height: 100vh;
+          min-height: 100vh;
+          max-height: 100vh;
+          }
 }
 
 @media screen and (max-width: 500px) {
