--- a/src/index.css
+++ b/src/index.css
@@ -58,8 +58,8 @@ height: 800px;
 min-height: 800px;
 max-height: 800px;
 
-border: 1px solid #2e2e2e;
-border-radius: 20px;
+/* border: 1px solid #2e2e2e;
+border-radius: 20px; */
 
 overflow: hidden;
 }
