--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,12 @@
 
 html {
      -webkit-tap-highlight-color: rgba(0,0,0,0);
+     width: 100%;
+     height: 100vh;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     text-align: center;
 }
 
 * {
@@ -34,80 +40,4 @@ html {
   -webkit-tap-highlight-color: hsla(0,0,0,0); /* transparent with hsla */
   -webkit-tap-highlight-color: #00000000; /* transparent with hex with alpha */
   -webkit-tap-highlight-color: #0000; /* transparent with short hex with alpha */
-}
-
-.white-box {
-padding: 10px;
-border-radius: 10px;
-background-color: #fff;
-box-shadow: var(--inner-box-s);
-border: 2px solid #fff;
-}
-
-body {
-     width: 100%;
-     height: 100vh;
-     display: flex;
-     align-items: center;
-     justify-content: center;
-   }
-
-#root {
-width: 1400px;
-height: 800px;
-min-height: 800px;
-max-height: 800px;
-
-/* border: 1px solid #2e2e2e;
-border-radius: 20px; */
-
-overflow: hidden;
-}
-
-.main {
-padding-top: 20px;
-width: 100%;
-height: 100%;
-gap: 20px;
-display: flex;
-flex-direction: column;
-}
-
-
-
-@media screen and (max-width: 1500px) {
-     #root {
-          width: 100%;
-        }
-
-     .main {
-     }
-}
-
-@media screen and (max-width: 1000px) {
-}
-
-@media screen and (max-width: 800px) {
-}
-
-@media screen and (min-height: 1000px) {
-     #root {
-          height: 800px;
-          min-height: 800px;
-          max-height: 800px;
-          }
-}
-
-@media screen and (max-height: 1000px) {
-     #root {
-          height: 100vh;
-          min-height: 100vh;
-          max-height: 100vh;
-          }
-}
-
-@media screen and (max-width: 500px) {
-}
-
-@media screen and (max-width: 400px) {
 }
